--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,63 @@ svg {
 }
 .dropdown { 
   width: 100%;
-  font-size: 30px; /* Remember to change font units to vw */
+  font-size: 2.5vw;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  color: #2F7BCA;
   padding: 5px;
-  border: 2px solid teal;
+  border: 1px solid #2F7BCA;
+  border-right: none;
   display: inline-block;
-  background: white;
+  background: url("dropdown-select.svg") right no-repeat;
   outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -appearance: none;
 }
 form {
   display: inline-block;
-  width: 40%;
+  width: 49%;
+  margin: 0;
+  padding: 0;
 }
-
+#buildings1 {
+  float: left;
+}
+#buildings2 {
+  float: right;
+}
 .building {
   fill: #7b8383;
 }
-.highlight {
-  fill: blue;
+.building:hover {
+  cursor: pointer;
 }
+.highlight {
+  fill: #2F7BCA;
+}
+#narrowView {
+  display: none;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 4vw;
+  color: #6F777F;
+  margin: 5px; 
+  margin-top: 20px;
+}
+
+@media (max-width: 500px) and (orientation: portrait) {
+  form {
+    display: block;
+    width: 80%;
+    margin-top: 10px;
+  }
+  #buildings2 {
+    float: left;
+  }
+  .dropdown {
+    font-size: 5vw;
+  }
+}
+
+
 
